# tchap-bot

./: .gitignore  Cargo.toml  flake.nix
src/: crous.rs  emoji_verification.rs  main.rs  persist_session.rs  poll.rs
